WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260862
[IFC] LayoutState::destroyBlock/InlineFormattingState functions use the wrong map
https://bugs.webkit.org/show_bug.cgi?id=260862
Summary
[IFC] LayoutState::destroyBlock/InlineFormattingState functions use the wrong...
alan
Reported
2023-08-29 07:32:25 PDT
ssia
Attachments
Patch
(1.53 KB, patch)
2023-08-29 07:37 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-08-29 07:37:10 PDT
Created
attachment 467484
[details]
Patch
Antti Koivisto
Comment 2
2023-08-29 07:42:39 PDT
Comment on
attachment 467484
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=467484&action=review
> Source/WebCore/layout/LayoutState.cpp:190 > - m_inlineFormattingStates.remove(&formattingContextRoot); > + m_blockFormattingStates.remove(&formattingContextRoot);
OOPS
EWS
Comment 3
2023-08-29 08:41:35 PDT
Committed
267407@main
(443d49efd65f): <
https://commits.webkit.org/267407@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467484
[details]
.
Radar WebKit Bug Importer
Comment 4
2023-08-29 08:42:16 PDT
<
rdar://problem/114629672
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug