[IFC] LayoutState::destroyBlock/InlineFormattingState functions use the wrong map https://bugs.webkit.org/show_bug.cgi?id=260862

Reviewed by Antti Koivisto.

* Source/WebCore/layout/LayoutState.cpp:
(WebCore::Layout::LayoutState::destroyBlockFormattingState):
(WebCore::Layout::LayoutState::destroyInlineFormattingState):

Canonical link: https://commits.webkit.org/267407@main